Revise discussion of results

--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -61,11 +61,11 @@ Congress has made several attempts to reduce the working deficit of the NFIP, an
 
 This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes themselves, rather than a new private buyer, and then permanently remove the home from the market. Because FEMA already has an existing relationship with flood insurance policyholders, this group of flood-susceptible residents could represent an easy first group of homeowners to approach for buyouts, particularly in the wake of a flood. However, if holding flood insurance makes homeowners _less_ likely to sell their homes following a flood, then that population is not as useful when FEMA is in search of potential buyout offerings. Thus, this paper attempts to determine whether holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood.
 
-To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database [@ZillowGroup2020], and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate with various lags both the main effect of floods on home sale probability, and the interaction effect of holding flood insurance and experiencing a flood on home sale probability. The matching process to combine these disparate datasets is imperfect, therefore the panel does not identify individual homes in each year. Rather, the unit of analysis is, by observation year, the set of homes in the same census tract and flood zone, and constructed in the same year.
+To answer this question, I combine several detailed micro datasets: real estate assessment and transaction records from county public records, collected in Zillow's ZTRAX database [@ZillowGroup2020], and NFIP data on flood policies written and claims filed. Using these data, I construct a panel of home transactions, flood events, and flood insurance takeup for 2009–2016 to estimate both the main effect of floods on home sale probability, and how that effect differs changes for those holding flood insurance. The constructed panel is a set of homes in each year, though the matching process to connect insurance policies with their associated homes is imperfect, therefore the panel does not uniquely identify insurance policies for each home. Rather, the insurance policies are spread over, by observation year, the set of homes in the same census tract and flood zone, and constructed in the same year.
 
-Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by the Biggert Waters Flood Insurance Reform Act of 2012. This approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to remain in flood zones following a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
+Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by the Biggert Waters Flood Insurance Reform Act of 2012. This instrument does provide some exogenous variation in takeup for one endogenous regressor, but in a specification with both a main effect and interaction with flooding, the instrument (both alone and itself interacted with flooding) is unable to provide sufficient variation to identify both endogenous regressors—even less so when lagged terms are introduced. As a result, I am unable to use these estimates to many any credible causal claims, though they do provide useful suggests for refinement and future research. 
 
-This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and in fact depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk misperception and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explore the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, finding an increase in prices and a small decrease in sale probability up to three years following a hurricane, and also find that incoming homebuyers after a hurricane are higher income than those they replace. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure, and is not limited to high-damage events like hurricanes. 
+This paper builds on a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and in fact depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk misperception and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explore the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, finding an increase in prices and a small decrease in sale probability up to three years following a hurricane, and also find that incoming homebuyers after a hurricane are higher income than those they replace. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure, and is not limited to high-damage events like hurricanes. 
 
 # Data
 
@@ -80,7 +80,7 @@ firststage <- nctrans_panel[full_sample == TRUE, .(polfrac = sum(policy_prob) / 
 ggplot(firststage, aes(x=year, y=polfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Flood Insurance Adoption Over Time") + ylab("Fraction of Homes with Flood Insurance") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.03), angle=90) + labs(shape="Adaptation Status", color="Adaptation Status")
 ```
 
-The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) tabulate every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]`. The data include details about the insured property, the insurance coverage, the loss event, and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. One potential issue with using insurance claims data to define flood experiences: it requires at least some homes to hold flood insurance in the exposed area. This connection may result in bias if areas holding fewer insurance policies are then less likely to register a flood event in our data, even if the true incidence of flooding is as high or higher than areas holding more insurance policies. A more comprehensive spatial flooding dataset, such as [NASA's MODIS Global Flood Mapping](https://floodmap.modaps.eosdis.nasa.gov/), could be an improvement in this methodology for future research.
+The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) tabulate every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]`. The data include details about the insured property, the insurance coverage, the loss event, and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. One potential issue with using insurance claims data to define flood experiences: it requires at least some homes to hold flood insurance in the exposed area. This connection may result in bias if areas holding fewer insurance policies are then less likely to register a flood event in my data, even if the true incidence of flooding is as high or higher than areas holding more insurance policies. A more comprehensive spatial flooding dataset, such as [NASA's MODIS Global Flood Mapping](https://floodmap.modaps.eosdis.nasa.gov/), could be an improvement in this methodology for future research.
 
 Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data. Flood zones are defined by the Flood Insurance Rate Maps following a topographic survey, and are categorized based on their probability of flooding, likely flood depth, and susceptibility to other flooding effects like coastal storm surge. The flood zones used in this analysis, defined as Special Flood Hazard Areas, have at least a 1% chance of flooding in a given year. Homes within a given flood zone generally share a similar base flood elevation, the expected depth of flooding above which new homes are required to be elevated to reduce the risk of property damage.
 
@@ -130,7 +130,9 @@ kable(sumstats, digits = 4, caption = "Summary statistics of the analysis panel,
 
 One potential issue in my data is that year of construction is not always properly recorded in county records or by the NFIP, adding error to the matching process. This issue is particularly pernicious because a sufficiently comprehensive renovation can result in a much later "effective" year of construction, subjecting a previously old house to new adaptation requirements, and county assessor records may or may not reflect this new construction year. This problem occasionally manifests as some set of matched homes having more insurance policies than homes. In these instances, I drop from the analysis all census tract x flood zone locations that have this problem in any construction year. A more detailed analysis could resolve or more delicately handle this mismatch for future research. 
 
-To inspect the variation of home sales relative to flood events, I run a reduced form regression of transaction probability by years since (or before, for the one year lead) a flood event, controlling for adapted status. The results of this reduced form regression are shown in Table \@ref(tab:reduced-form), and indicate at least some responsiveness to flooding. Potentially concerningly, adapted homes appear to be slightly less likely to be sold when a flood event occurs in the _subsequent_ year, a coefficient one would expect to be 0. This result may point to some unexplained variation in transaction probability driven by trends from observation year or year of home construction that are not captured by the fixed effects. 
+Another caveat is that, within a year, I do not enforce that sales must occur after floods and insurance policy effective dates. This potential reversal of causality could yield misleading results if homeowners are likely to hold flood insurance immediately after purchasing a home in a flood zone (per federal mortgage requirements), but let their policy lapse in later years. Future research would benefit from a more careful comparison of flooding dates, policy start dates, transaction dates, potentially in combination with more precise flood data as previously mentioned.
+
+To inspect the variation of home sales relative to flood events, I run a reduced form regression of transaction probability by years since (or before, for the one year lead) a flood event, controlling for adapted status. The results of this reduced form regression are shown in Table \@ref(tab:reduced-form), and indicate at least some responsiveness to flooding. The response does not appear to be materially different for adapted and non-adapted homes. 
 
 ```{r transprob-byflood, echo=FALSE, warning=FALSE, results='asis'}
 transprob_flood_es <- felm(transaction_obs ~ adapted*flood_event + adapted*flood_L1 + adapted*flood_L2
@@ -166,7 +168,7 @@ Because the effect may accumulate over time, however, I also want to estimate th
 $$P(transaction_{lit}) = \sum_{\tau} \left[\alpha_{\tau} Insurance_{lit+\tau} + \beta_{\tau} Flood_{lt+\tau} + \gamma_{\tau} (Flood_{lt+\tau} \times Insurance_{lit+\tau}) \right] + \varepsilon_{lit}$$
 As before, the regression also includes fixed effects for location (the intersection of a census tract and a flood zone), year, year of home construction, and whether the home is subject to an adaptation requirement. The unit of analysis is again a single house in a single year, and the meaning of the subscripts is as before. The lag indexer $\tau$ takes on values from -3 (a three year lag) to +1 (a one year lead), allowing me to study how the effect on home sales changes over time. In order to have a full set of lags, I restrict the years of the sample based on the number of lags included. With two lags, I can consider sales from 2011–2016, while three lags restricts the panel to 2012–2016.  Because the NFIP data extends beyond the housing data, I can create one year lead variables of flood events and insurance policies as a check for pretrends without reducing the sample size of the panel. 
 
-Because the choice to purchase flood insurance is endogenous, I instrument for insurance takeup using an exogenous policy shock that changed flood insurance rate schedules. The Biggert Waters Flood Insurance Reform Act of 2012 made several changes to NFIP rate schedules starting in 2013. In particular, Biggert Waters mandated annual premium increases that applied differently for adapted and non-adapted homes. Homes built or substantially renovated after the adoption of the first FIRM panel covering the property are required to be adapted in their design to reduce the risk of flood damage, primarily through elevation of the lowest occupied level of the home. The adapted status is defined by the year of home construction relative to the year of FIRM adoption. Biggert Waters put in place mandated premium increases for older, non-adapted homes, but did not include any mandates or policy changes that may impact home sales other than through flood insurance. This policy change will provide exogenous policy variation to identify the effect of holding flood insurance. In particular, I instrument using the interaction of an indicator variable for the years after Biggert Waters was passed and the home's adaptation status ($\mathbb{I}(\textrm{year} > 2012) \times \mathbb{I}(\mathrm{adapted})$). This instrument structure allows me to leverage the exogenous variation from the _differential_ price shocks between adapted and non-adapted homes, while still including year fixed effects, which would not be possible if instrumenting only with the year dummy $\mathbb{I}(\textrm{year} > 2012)$.
+Because the choice to purchase flood insurance is endogenous, I instrument for insurance takeup using an exogenous policy shock that changed flood insurance rate schedules. The Biggert Waters Flood Insurance Reform Act of 2012 made several changes to NFIP rate schedules starting in 2013. In particular, Biggert Waters mandated annual premium increases that applied differently for adapted and non-adapted homes. Homes built or substantially renovated after the adoption of the first FIRM panel covering the property are required to be adapted in their design to reduce the risk of flood damage, primarily through elevation of the lowest occupied level of the home. The adapted status is defined by the year of home construction relative to the year of FIRM adoption. Biggert Waters put in place mandated premium increases for older, non-adapted homes, but did not include any mandates or policy changes that may impact home sales other than through flood insurance. This policy change will provide exogenous policy variation to identify the effect of holding flood insurance. In particular, I instrument using the interaction of an indicator variable for the years after Biggert Waters was passed and the home's adaptation status ($\mathbb{I}(t > 2012) \times Adapted_{lc}$), along with the interaction of this instrument with the flood indicator ($\mathbb{I}(t > 2012) \times Adapted_{lc} \times Flood_{lt}$) and the relevant lag and lead versions. This instrument structure allows me to leverage the exogenous variation from the _differential_ price shocks between adapted and non-adapted homes, while still including year fixed effects, which would not be possible if instrumenting only with the year dummy $\mathbb{I}(t > 2012)$.
 
 Table \@ref(tab:first-stage-output) shows example first stage regressions for both the difference-in-difference and event study specifications. Because insurance takeup appears both as a main effect and an interaction effect (and each again with multiple lag terms in the event study), the Biggert Waters-induced exogenous price variation, when lagged and interacted with flood experience, needs to provide enough exogenous variation to instrument for the multiple appearances of the endogenous variable in the specification. This requirement may be of concern, particularly for the event study specification with several lags, and additional exogenous variation could be useful to better identify the multiple endogenous regressors.
 
@@ -218,11 +220,11 @@ stargazer(FS_policy_prob, FS_policy_fld_prob, FS_policy_prob_lags, FS_policy_fld
 
 This econometric approach requires two identification assumptions: first, the probability of a home experiencing flooding is exogenous, conditional on census tract, flood zone, and adaptation status. Obviously, floods are highly spatially and temporally correlated, and homeowners can undertake substantial defensive investments (primarily though elevation) to reduce their risk. But by defining a flood event at the census tract x flood zone level, we exclude the peculiarities of a given house, and think only about the generalized flood risk in the local area. Once we control for these broader spatial effects, exogeneity of flood probability is much more credible.
 
-The second identification assumption is that any time trends in transaction probability must be common to adapted and non-adapted homes. Our instrument for insurance leverages _differential_ price changes for adapted and non-adapted homes, so common time trends do not effect the coefficient estimates, but differential time trends will violate the exclusion restriction and yield biased estimates. While it is certainly possible that older and newer homes had diverging sale trends during this period, the threshold year defining adapted and non-adapted homes differed in different areas depending on the first FIRM published for the region, ranging primarily from the mid-1970s to the mid-1990s, with some initial FIRMs established even later. This diversity of adaptation years will hopefully dilute any differing trends driven by home construction year. Figure \@ref(fig:trans-prob) shows the fraction of homes sold in a given sample year, separately for adapted and non-adapted homes. While the probability levels are different, the trends appear to be similar in the two series, lending credence to this identification assumption.
+The second identification assumption is that any time trends in transaction probability must be common to adapted and non-adapted homes. The instrument for insurance leverages _differential_ price changes for adapted and non-adapted homes, so common time trends do not effect the coefficient estimates, but differential time trends will violate the exclusion restriction and yield biased estimates. While it is certainly possible that older and newer homes had diverging sale trends during this period, the threshold year defining adapted and non-adapted homes differed in different areas depending on the first FIRM published for the region, ranging primarily from the mid-1970s to the mid-1990s, with some initial FIRMs established even later. This diversity of adaptation years will hopefully dilute any differing trends driven by home construction year. Figure \@ref(fig:trans-prob) shows the fraction of homes sold in a given sample year, separately for adapted and non-adapted homes. While the probability levels are different, the trends appear to be similar in the two series, lending credence to this identification assumption.
 
 ```{r trans-prob, echo=FALSE, fig.cap="Graph of home sale probability over time, separately for adapted and nonadapted homes.", fig.dim=c(5,3.5)}
 transtime <- nctrans_panel[full_sample == TRUE, .(transfrac = mean(transaction_obs)), keyby = .(year, adapted_text)]
-ggplot(transtime, aes(x=year, y=transfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Home Sale Probability Over Time") + ylab("Probability of Home Sale") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.055), angle=90)
+ggplot(transtime, aes(x=year, y=transfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Home Sale Probability Over Time") + ylab("Probability of Home Sale") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.055), angle=90) + labs(shape="Adaptation Status", color="Adaptation Status")
 ```
 
 # Results
@@ -260,11 +262,11 @@ OLS_transprob_dd <- felm(sale_2years ~ flood_event*policy_prob | panel_id + year
 # summary(OLS_transprob_dd)
 ```
 
-I first consider the results of our models without instrumenting for insurance takeup. To explore any time delays in the effect of flood events and insurance, I run four regressions, varying the number of lag years between two and three (which changes the available sample size of the model) and whether I include a one year lead variable (which has no impact on the sample). Table \@ref(tab:OLS-output) shows the regression outputs for these uninstrumented models. The lags are indexed from the perspective of the year of the potential sale. For example, the _flood (2 years ago)_ variable considers whether homes are more likely to be sold if they had flooded two years prior, or perhaps more naturally, whether homes are more likely to be sold two years after a flood.
+I first consider the OLS results of these models without instrumenting for insurance takeup. I run four regressions: my preferred difference-in-difference specification (column 1) and three event study specifications (columns 2-4). To explore any time delays in the effect of flood events and insurance, the event studies vary the number of lag and lead years, which changes the available sample size of the model. Note that  I cannot include both a three year lag variable AND a one year lead variable in the same regression given my sample. Because of the position of the Biggert Waters act within the sample period, including three lags reduces the sample such that there is no variation in the instrument for the one year lead variable.
 
-Without instrumenting for insurance takeup, across all models, the main effects of insurance drive most of the explained variation. Homes holding flood insurance in the observed year are more likely to sell, while homes that held flood insurance in one or two prior years were less likely. These effects are robust to the specification, but are very likely due to the endogenous nature of insurance takeup. Homes in SFHAs with federally backed mortgages are required to hold flood insurance, so recently purchased homes are likely to hold insurance. However, enforcement is low, so takeup falls in later years of ownership.
+Table \@ref(tab:OLS-output) shows the regression outputs for these uninstrumented models. Models with lag terms are indexed from the perspective of the observation year of the potential sale. For example, the _flood (2 years ago)_ variable considers whether homes are more likely to be sold if they had flooded two years prior, or perhaps more naturally, whether homes are more likely to be sold two years after a flood. Column (1) is my preferred specification. 
 
-While I do not find any substantial effects of flooding on home sale probability, I do find that homes which flooded while holding insurance are somewhat less likely to sell three years later. The effect, however, is small, and likely also driven by endogeneity concerns. 
+Without instrumenting for insurance takeup, across all models, the main effects of flooding and holding insurance drive the explained variation. Homes that have flooded are less likely to be sold in the subsequent one to two years, comporting with the results of @Zivin2020. Homes holding flood insurance are overall more likely to sell than homes without. Looking at the event study results, insurance held in the observation year increases sale probability, while homes that held flood insurance in one or two prior years were less likely to be sold. These effects are robust to the specification, but are very likely due to the endogenous nature of insurance takeup. Homes in SFHAs with federally backed mortgages are required to hold flood insurance, so recently purchased homes are likely to hold insurance. However, enforcement is low, so takeup falls in later years of ownership. This combination suggests that these effects are at least partially driven by sales occurring prior to flood events, as well as new homeowners buying flood insurance upon purchasing a new home, per mortgage requirements. Further analysis of the relative timing of these events within a year could be able to disentangle these effects. I do not observe any significant differential effects of flooding for policyholders. 
 
 ```{r OLS-output, echo=FALSE, warning=FALSE, echo=FALSE, results='asis'}
 covariate_labs <- c("flood (concurrent)", "flood (1 year ago)", "flood (2 years ago)", "flood (3 years ago)", 
@@ -282,7 +284,7 @@ stargazer(OLS_transprob_dd, OLS_transprob_reg_2, OLS_transprob_reg_3, OLS_transp
           notes = "\\parbox[t]{0.5\\textwidth}{All regressions include fixed effects for census tract x flood zone, observation year, construction year, and adaptation status. Standard errors are clustered by census tract.}", font.size = "small")
 ```
 
-## IV
+## Instrumenting for Insurance Takeup
 
 ```{r IV-2-noF, include=FALSE}
 # Two Lags, no Leads
@@ -327,9 +329,7 @@ transprob_reg_dd <- felm(sale_2years ~ flood_event | panel_id + year + YearBuilt
 summary(transprob_reg_dd)
 ```
 
-To disambiguate these effects, I instrument for insurance takeup, with Biggert-Waters and HFIAA providing exogenous variation in flood insurance premiums. Table \@ref(tab:IV-output) shows the regression results when I instrument for insurance takeup. I now find significant effects showing homes that experience flooding while holding insurance are less likely to be sold one or two years later. While the effect for a single year lag is consistent, the two year lag effect is washed out when a third year lag term is included. In addition, the main effects for holding insurance remain strong (concurrent effects and the longer lags, though the one year lag shows no effect) and maintain their signs from the uninstrumented regressions. 
-
-However, the effect sizes for the insurance main effects are now improbably large. These effect sizes suggest that my chosen identification strategy has not been successful. Some combination of multicollinearity between the adaptation instrument and the year fixed effects, and insufficient variation from the instrument is likely leading to a violation of the exclusion restriction, resulting in biased, invalid estimates. Further exploration and model modification may allow me to develop more credible estimates of these effects.
+To disambiguate the true effects from the endogeneity of insurance takeup, I instrument for takeup with the Biggert Waters premium reforms. Table \@ref(tab:IV-output) shows the regression results when I instrument for insurance takeup. In all specifications, I am unable to find any significant effects. In addition, the coefficient estimates are implausibly large, suggesting that the instrument was not successful in providing enough exogenous variation for the multiple endogenous variables in each specification. Despite having both $\mathbb{I}(t > 2012) \times Adapted_{lc}$ and $\mathbb{I}(t > 2012) \times Adapted_{lc} \times Flood_{lt}$ to instrument for $Insurance_{lct}$ and $Flood_{lt} \times Insurance_{lct}$, and the instruments providing a nontrivial amount of predictive power for each endogenous variable individually (per Table \@ref(tab:first-stage-output)), there was not enough unique variation to provide sufficient identification for both endogenous variables simultaneously (likely due to the relatively low probability of flooding and holding insurance overall in my data). This problem was worsened in the event study specification, now with four or six endogeneous regressors to be instrumented. Without enough exogenous variation, my IV estimates cannot be credibly interpreted, even in their signs.
 
 ```{r IV-output, echo=FALSE, warning=FALSE, echo=FALSE, results='asis'}
 stargazer(transprob_reg_dd, transprob_reg_2, transprob_reg_3, transprob_reg_2_lead, 
@@ -341,17 +341,13 @@ stargazer(transprob_reg_dd, transprob_reg_2, transprob_reg_3, transprob_reg_2_le
           notes = "\\parbox[t]{0.5\\textwidth}{All regressions include fixed effects for census tract x flood zone, observation year, construction year, and adaptation status. Standard errors are clustered by census tract.}", font.size = "small")
 ```
 
-# Discussion
-
-While I am hesitant to draw strong conclusions from these estimates, the lack of effect from floods (and the only significant effect being negative) comports with the results of @Zivin2020, who find small negative effects of hurricanes (using wind rather than floods) on home transactions in the three years following the disaster. The interaction effects suggest that holding flood insurance tends to strengthen this effect, making homeowners less likely to sell in the years following a flood if they are insured. From a policy perspective, this result suggests that FEMA would not necessarily find an abundance of willing sellers in the wake of major flooding; a result that perhaps should not be surprising. Consumers hold strong attachments to their homes and neighborhoods, and given the opportunity to rebuild (on the government's dime), most choose to do so. 
-
-Of course, this research design is not sufficient to provide unambiguous policy guidance around severe repetitive loss properties. While all SFHA properties are at substantially elevated flood risk (1% or more in any given year), SRL properties involve the confluence of high flood risk and low home value. Heterogeneity in home value is likely an important driver of the transaction probability, and is not well captured by the data as they currently exist. If FEMA were looking to design a more robust program of buyouts for SRL homes, they would need to think carefully about the distributional effects and moral hazard implications of any policy, both of which are beyond the scope of this paper. This research may at least provide policymakers with an idea for an initial set of target homeowners, or at a minimum, an idea of who to exclude from any initial focus. 
-
 # Conclusions
 
-Understanding the behavior of homeowners in flood zones is of increasing importance as climate change exacerbates flood risk and the corresponding government outlays. Buying out owners of severe repetitive loss properties is likely to be an important step toward achieving long term financial stability for the National Flood Insurance Program, and reducing the risk to life and property in flood hazard areas. Designing such a policy to be feasible and politically palatable will be a substantial challenge, and an understanding of the behavior of homeowners will provide important insight into this policy design. This research attempts to quantify whether experiencing a flood event makes homeowners more or less likely to sell their home in subsequent years, and whether holding flood insurance moderates that effect. Using data on flood insurance policies and claims, as well as real estate assessment and transaction data, I estimate the probability of home sale using concurrent and lagged indicators of flood events and insurance, instrumenting for insurance takeup using exogenous policy variation in flood insurance premiums. Results are mixed, and are likely biased due to ill-constructed fixed effects or insufficient variation in the instrument. However, they are suggestive that homeowners holding flood insurance may be less likely to sell their homes in the wake of a flood. This result, if strengthened, would indicate that FEMA will not find much success in encouraging existing NFIP policyholders to accept a buyout after a flood without additional compensation. If nothing else, they do not represent low hanging fruit for property buyouts.
+Understanding the behavior of homeowners in flood zones is of increasing importance as climate change exacerbates flood risk and the corresponding government outlays. Buying out owners of severe repetitive loss properties is likely to be an important step toward achieving long term financial stability for the National Flood Insurance Program, and reducing the risk to life and property in flood hazard areas. Designing such a policy to be feasible and politically palatable will be a substantial challenge, and an understanding of the behavior of homeowners will provide important insight into this policy design. This research attempts to quantify whether experiencing a flood event makes homeowners more or less likely to sell their home in subsequent years, and whether holding flood insurance moderates that effect. Using data on flood insurance policies and claims, as well as real estate assessment and transaction data, I attempt to estimate the probability of home sale using concurrent and lagged indicators of flood events and insurance, instrumenting for insurance takeup using exogenous policy variation in flood insurance premiums. The OLS results confirm the findings of @Zivin2020, but are also suggestive of bias due to ambiguity in the relative dates of floods, insurance policies, and home sales. The IV results are not usefully interpretable, as my chosen instrument for exogenous variation in insurance premiums is not able to provide enough variation to simultaneously identify the various forms of the exogenous regressor (interacted with flooding and lagged). 
 
-Additional work is ongoing to improve and build upon this research. I am working to sharpen the model identification by adjusting the construction of the temporal fixed effects to remove potential collinearity with the instrument. I believe Biggert-Waters and HFIAA provide sufficient price variation to impact takeup, but the model will need to be refined to isolate this variation from broader year to year trends in the housing market. More rigorous processing of the real estate data may allow for additional hedonic covariates to be included, allowing for greater explanatory power. More adept matching of real estate and NFIP data could improve sample construction, reduce potential biases and errors, and improve overall model power. In addition, a cleaner dataset could allow me to explore more of the potential underlying mechanisms driving any effects on transaction probability, such as differing rates of foreclosure. Finally, more precise data from the NFIP could provide direct matching of homes with flood policies and claims, removing a potentially significant source of error in this analysis from the imprecise matching method currently employed to construct the panel.
+Additional work is ongoing to improve and build upon this research. Additional time refining the analysis panel may be able to provide improved validity in the parameter estimates by correcting for data errors in year of home construction and the relative timing of flooding, home sales, and insurance policies. In addition, improved geocoding may increase match rates between homes and insurance policies. I believe Biggert Waters should provide sufficient price variation to impact takeup, but potentially will need additional variation to supplement it when multiple endogenous regressors appear in the model. In addition, a cleaner dataset could allow me to explore more of the potential underlying mechanisms driving any effects on transaction probability, such as differing rates of foreclosure. Finally, more precise data from the NFIP could provide direct matching of homes with flood policies and claims, removing a potentially significant source of error in this analysis from the imprecise matching method currently employed to construct the panel.
+
+Of course, this research design is not sufficient to provide unambiguous policy guidance around severe repetitive loss properties. While all SFHA properties are at substantially elevated flood risk (1% or more in any given year), SRL properties involve the confluence of high flood risk and low home value. Heterogeneity in home value is likely an important driver of the transaction probability, and is not well captured by the data as they currently exist. If FEMA were looking to design a more robust program of buyouts for SRL homes, they would need to think carefully about the distributional effects and moral hazard implications of any policy, both of which are beyond the scope of this paper. 
 
 \singlespacing
 
